Edited layout dropdowns

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -89,6 +89,9 @@ header{
                 @include tablet{
                     width: 20vw;
                 }
+                @include desktop{
+                    width: 15vw;
+                }
             }
             img{
                 height: 30px;
