Edited layout profile details

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -97,8 +97,8 @@
                 position: absolute;
                 background-color: $background;
                 padding: 20px;
-                right: 0;
-                top: 40px;
+                right: -100px;
+                top: -300px;
 
                 h3{
                     text-align: center;
