Refactored edit profile details

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -96,6 +96,7 @@
                 gap: 5px;
                 position: absolute;
                 background-color: $background;
+                z-index: 10;
                 padding: 20px;
                 right: -100px;
                 top: -300px;
