Edited profile details layout

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -98,7 +98,7 @@
                 background-color: $background;
                 z-index: 10;
                 padding: 20px;
-                right: -100px;
+                left: -250px;
                 top: -300px;
 
                 h3{
