--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -27,6 +27,11 @@
                     display: flex;
                     align-items: center;
                     gap: 10px;
+
+                    .profile-icon{
+                        width: 45px;
+                        height: 45px;
+                    }
                 }
                 input{
                     margin-left: 0;
