--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -98,8 +98,9 @@
                 background-color: $background;
                 z-index: 10;
                 padding: 20px;
-                left: -250px;
-                top: -300px;
+                /* left: -350px;
+                top: -320px;
+                width: 50vw; */
 
                 h3{
                     text-align: center;
@@ -112,6 +113,7 @@
                     justify-content: space-between;
                     align-items: center;
                     gap: 10px;
+                    word-break: break-word;
     
                     img{
                         width: 40px;
