--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -98,9 +98,9 @@
                 background-color: $background;
                 z-index: 10;
                 padding: 20px;
-                /* left: -350px;
+                left: -250px;
                 top: -320px;
-                width: 50vw; */
+                width: 50vw;
 
                 h3{
                     text-align: center;
