Ajdusted layout profile details

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -98,7 +98,8 @@
                 background-color: $background;
                 z-index: 10;
                 padding: 20px;
-                left: -250px;
+                /* left: -250px; */
+                right: 0;
                 top: -320px;
                 width: 50vw;
 
