Adjusted profile details layout

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -98,12 +98,14 @@
                 background-color: $background;
                 z-index: 10;
                 padding: 20px;
-                left: 50%;
-                transform: translateX(-50%);
-                bottom: 30px;
+                bottom: 0;
+                right: -120px;
+                width: 50vw;
 
                 @include tablet{
-                    transform: translateX(-100%);
+                   top: -150px; 
+                   bottom: auto;
+                   right: 0;
                 }
                 @include desktop{
                     width: 30vw;
