--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -4,10 +4,10 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin: 10px; 
+    margin: 10px 0 0 10px;
     position: relative;
 
-    .add-post{
+    /* .add-post{
         cursor: pointer;
         position: absolute;
         top: -10px;
@@ -16,5 +16,5 @@
         border-radius: 5px;
         color: $primary;
         background-color: $darkTextColor; 
-    }
+    } */
 }
