--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -98,6 +98,9 @@
                     flex-direction: column;
                     cursor: pointer;
                     
+                    span{
+                        padding-top: 5px;
+                    }
                     .cancel{
                         background-color: $primary;
                         color: $darkTextColor;
