--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,7 +1,8 @@
 @import '../../App.scss';
 
 .profile{
-    
+    margin-top: 10px;
+
     .images{
         width: 100%;
         height: 300px;
@@ -12,6 +13,7 @@
             height: 100%;
             object-fit: cover;
             padding: 10px;
+            border-radius: 20px;
         }
         .profile-image{
             width: 80px;
