--- a/src/components/layout/leftbar/leftbar.scss
+++ b/src/components/layout/leftbar/leftbar.scss
@@ -6,14 +6,14 @@
         top: 10px;
         height: calc(100vh - 50px);//Needed to stay in position for the scroll
         overflow: scroll;
-        /* display: none; */
+        display: none;
 
         &::-webkit-scrollbar{
             display: none;
         }
-       /*  @include tablet{
+        @include tablet{
             display: block;
-        } */
+        }
 
         .wrapper{
             padding: 10px 20px;
