--- a/src/components/posts/post/post.scss
+++ b/src/components/posts/post/post.scss
@@ -77,9 +77,8 @@
 
         img{
             width: 100%;
-            max-height: 500px;
+            height: auto;
             object-fit: cover;
-            margin-top: 20px;
         }
         .likes{
             display: flex;
