--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -57,16 +57,23 @@ header{
         }
     
     }
+    .center{
+        position: relative;
 
+        .notifications{
+            cursor: pointer;
+
+            .notifications-content{
+                position: absolute;
+            }
+        }
+
+    }
     .right{
         display: flex;
         align-items: center;
         gap: 10px;
         
-        .notifications{
-            cursor: pointer;
-        }
-
         .user{
             position: relative;
             
