Edited font size notifications

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -63,6 +63,9 @@ header{
         .notifications{
             cursor: pointer;
 
+            .notifications-icon{
+                font-size: 30px;
+            }
             .notifications-content{
                 position: absolute;
             }
