--- a/src/components/latest/latest.scss
+++ b/src/components/latest/latest.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .latest{
     padding: 10px 0;   
 
@@ -14,5 +16,7 @@
            border-radius: 50%;
            object-fit: cover;
        }
+      
+       
    }
 }
