--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -91,8 +91,9 @@ header{
                 position: absolute;
                 right: 5px;
                 top: 45px;
-                background-color: $secondary;
-                color: $darkTextColor;
+                background-color: white;
+                border: 1px solid $background;
+                color: $textColor;
                 padding: 10px;
                 border-radius: 0 0 10px 10px;
 
