--- a/src/components/posts/post/post.scss
+++ b/src/components/posts/post/post.scss
@@ -54,8 +54,9 @@
                     position: absolute;
                     right: 0;
                     width: 40vw;
-                    background-color: $secondary;
-                    color: $darkTextColor;
+                    background-color: white;
+                    border: 1px solid $background;
+                    color: $textColor;
                     padding: 10px;
                     border-radius: 0 0 10px 10px;
 
