--- a/src/components/friends/friends.scss
+++ b/src/components/friends/friends.scss
@@ -1,9 +1,7 @@
 @import '../../App.scss';
 
 .friends{ 
-    position: relative;
-    
-    flex: 2;
+    width:70vw;
     position: absolute;
     top: 50px;
     right: 0;
