--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -24,7 +24,7 @@
             left: 0;
             right: 0;
             margin: auto;
-            top: 250px;
+            top: calc(100% - 30px);
             
         }
     }
