--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -3,7 +3,7 @@
 header{
     display: flex;
     justify-content: space-between;
-    min-height: 50px;
+    align-items: center;
     padding: 15px;
     position: sticky;
     top: 0;
@@ -51,11 +51,11 @@ header{
             gap: 10px;
         }
         
-        input{
+       /*  input{
             padding: 5px;
             border-radius: 0 0 10px 10px;
             margin-left: 5px;
-        }
+        } */
     
     }
     .center{
@@ -87,24 +87,25 @@ header{
                 cursor: pointer;
             }
             ul{
-                width: 40vw;
+                width: 45vw;
                 position: absolute;
                 right: 5px;
-                top: 45px;
+                top: 35px;
                 background-color: white;
                 border: 1px solid $background;
                 color: $textColor;
-                padding: 10px;
+                padding: 15px;
                 border-radius: 0 0 10px 10px;
+                line-height: 2rem;
 
                 @include mobile{
-                    width: 30vw;
+                    width: 40vw;
                 }
                 @include tablet{
-                    width: 20vw;
+                    width: 25vw;
                 }
                 @include desktop{
-                    width: 15vw;
+                    width: 20vw;
                 }
             }
             img{
