--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,10 +1,10 @@
 @import '../../App.scss';
 
 .sidebar{
-        flex: 2;
+        width: 80vw;
         position: absolute;
         top: 50px;
-        left: 80px;
+        left: 30px;
         background-color: white;
         border: 1px solid $background;
         border-radius: 20px 20px 0 0;
@@ -13,6 +13,10 @@
         padding: 10px;
         z-index: 1000;
 
+        @include mobile{
+            left: 70px;
+            width: 70vw;
+        }
         &::-webkit-scrollbar{
             display: none;
         }
@@ -36,9 +40,9 @@
                     padding: 10px;
                 }
 
-                .item{
+                .item a{
                     display: flex;
-                    gap: 10px;
+                    gap: 5px;
                     align-items: center;
                     
                     a{
