--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -8,7 +8,7 @@
     .card{
         display: flex;
         flex-direction: column-reverse;
-        margin-top: 40px;
+        margin: 40px 0;
         max-width: 75%;
 
         @include tablet{
@@ -17,7 +17,7 @@
 
         .login-left{
             flex: 1;
-            padding: 40px;
+            padding: 20px 40px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -32,11 +32,11 @@
                 font-weight: 600;
                 font-size: 50px;
                 color: $darkTextColor;
-                margin: 20px 0 10px 0;
+                margin: 10px 0;
         
                 @include tablet{
                     font-size: 40px;
-                    margin: 60px 0 20px 0;
+                    margin: 20px 0;
                 }
                 @include large{
                     font-size: 50px;
@@ -49,6 +49,7 @@
            } 
            span{
                 font-size: 14px;
+                margin-bottom: 10px;
                 color:$darkTextColor;
            }
            button{
