--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,4 +1,5 @@
 @import '../../App.scss';
+
 .register{
     display: flex;
     justify-content: center;
@@ -7,7 +8,7 @@
     .card{
         display: flex;
         flex-direction: column;
-        margin-top: 40px;
+        margin: 40px 0;
         max-width: 75%;
 
         @include tablet{
@@ -26,9 +27,7 @@
                 justify-content: space-between;
                 flex: 1;
             }
-            @include large{
-                             
-            }
+        
             h1{
                 font-size: 50px;
                 font-weight: 600;
@@ -46,6 +45,7 @@
            } 
            span{
                 font-size: 14px;
+                margin-bottom: 10px;
                 color:$darkTextColor;
            }
            button{
