--- a/src/components/posts/postDetail/postDetail.scss
+++ b/src/components/posts/postDetail/postDetail.scss
@@ -1,10 +1,10 @@
 @import '../../../App.scss';
 
 .edit{
-    width: 90vw;
+    max-width: 80vw;
     align-items: center;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 10px;
     background-color: #fffefe;
     border: 2px solid $background;
     border-radius: 5px;
@@ -17,18 +17,16 @@
         width: 70vw;
     }
     @include tablet{
-        width: 50vw;
+        width: 45vw;
     }
         
     .back-link{
         display: flex;
         gap: 5px;
-        position: absolute;
-        left: 0;
         color: $secondary;
-        top: -30px;
     }
     .edit-form{
+        max-width: 45vw;
         padding: 10px 0;
         display: flex;
         flex-direction: column;
